--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
 <body>
   <!--Шапка-->
-  <header class="header">
+  <header class="header header-portfolio">
     <div class="container main-nav">
       <nav class="header-nav">
         <a href="./index.html" lang="en" class="logo"><span>Web</span>Studio</a>
@@ -56,7 +56,13 @@
 
         <ul class="portfolio list">
           <li class="portfolio-item"><a href="" class="card-link link">
-              <img src="./images/tehno.jpg" alt="Ноутбук">
+              <div class="portfolio-thumb"><img src="./images/tehno.jpg" alt="Ноутбук">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Технокряк</h2>
                 <p>Веб-сайт</p>
@@ -64,7 +70,13 @@
             </a>
           </li>
           <li class="portfolio-item"><a href="" class="card-link link">
-              <img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star">
+              <div class="portfolio-thumb"><img src="./images/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
@@ -72,7 +84,13 @@
             </a>
           </li>
           <li class="portfolio-item"><a href="" class="card-link link">
-              <img src="./images/seafood.jpg" alt="Логотип ресторана Seafood">
+              <div class="portfolio-thumb"><img src="./images/seafood.jpg" alt="Логотип ресторана Seafood">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Ресторан Seafood</h2>
                 <p>Приложение</p>
@@ -80,7 +98,13 @@
             </a>
           </li>
           <li class="portfolio-item"><a href="" class="card-link link">
-              <img src="./images/prime.jpg" alt="Наушники">
+              <div class="portfolio-thumb"><img src="./images/prime.jpg" alt="Наушники">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Проект Prime</h2>
                 <p>Маркетинг</p>
@@ -89,7 +113,13 @@
           </li>
           <li class="portfolio-item">
             <a href="" class="card-link link">
-              <img src="./images/boxes.jpg" alt="Две коробки">
+              <div class="portfolio-thumb"><img src="./images/boxes.jpg" alt="Две коробки">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Проект Boxes</h2>
                 <p>Приложение</p>
@@ -99,7 +129,13 @@
 
           <li class="portfolio-item">
             <a href="" class="card-link link">
-              <img src="./images/insp.jpg" alt="Монитор">
+              <div class="portfolio-thumb"><img src="./images/insp.jpg" alt="Монитор">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
@@ -109,7 +145,15 @@
 
           <li class="portfolio-item">
             <a href="" class="card-link link">
-              <img src="./images/limited-edition.jpg" alt="Издание Limited Edition">
+              <div class="portfolio-thumb">
+                <div class="portfolio-thumb"></div><img src="./images/limited-edition.jpg"
+                  alt="Издание Limited Edition">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Издание Limited Edition</h2>
                 <p>Дизайн</p>
@@ -119,7 +163,13 @@
 
           <li class="portfolio-item">
             <a href="" class="card-link link">
-              <img src="./images/lab.jpg" alt="Логотип проекта LAВ">
+              <div class="portfolio-thumb"><img src="./images/lab.jpg" alt="Логотип проекта LAВ">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Проект LAB</h2>
                 <p>Маркетинг</p>
@@ -129,7 +179,13 @@
 
           <li class="portfolio-item">
             <a href="" class="card-link link">
-              <img src="./images/growing.jpg" alt="Работа за ноутбуком">
+              <div class="portfolio-thumb"><img src="./images/growing.jpg" alt="Работа за ноутбуком">
+                <div class="thumb-text">
+                  <p>Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу
+                    для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                </div>
+              </div>
               <div class="card-content">
                 <h2 class="portfolio-title">Growing Business</h2>
                 <p>Приложение</p>
