--- a/index.html
+++ b/index.html
@@ -103,23 +103,22 @@
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="work-list list">
           <li class="work-item item">
-            <div class="work-thumb"><a href=""><img src="./images/computer.jpg" alt="Написание кода" width="370"
-                  class="work-link" /></a>
+            <div class="work-thumb"><img src="./images/computer.jpg" alt="Написание кода" width="370"
+                class="work-link" />
               <div class="work-action">
                 <p>Десктопные приложения</p>
               </div>
             </div>
           </li>
           <li class="work-item item">
-            <div class="work-thumb"><a href=""><img src="./images/computer2.jpg" alt="Сайт под мобильный телефон"
-                  width="370" /></a>
+            <div class="work-thumb"><img src="./images/computer2.jpg" alt="Сайт под мобильный телефон" width="370" />
               <div class="work-action">
                 <p>Мобильные приложения</p>
               </div>
             </div>
           </li>
           <li class="work-item item">
-            <div class="work-thumb"><a href=""><img src="./images/computer3.jpg" alt="Палитра цветов" width="370" /></a>
+            <div class="work-thumb"><img src="./images/computer3.jpg" alt="Палитра цветов" width="370" />
 
               <div class="work-action">
                 <p>Дизайнерские решения</p>
